Added some click fund stuff.

--- a/report/report.tex
+++ b/report/report.tex
@@ -213,7 +213,7 @@ In the weak sense, both methods have the same order of convergence equal to $1$.
 
 \section{Level-Click Fund}
 We construct a fund which consists of a portfolio of stocks and put options.
-The initial portfolio consists of an equal number of shares and put options
+The initial portfolio consists of an equal number of stocks and put options
 where the put options have a strike price ($K$) equal to the stock price
 ($S_0$). The put options have a time to maturity of $T = \mathcal{T}$ where
 $\mathcal{T}$ is the life time of the fund. The level-click fund strategy
@@ -224,6 +224,7 @@ current stock price and a time to maturity $T = \mathcal{T} - t$ where $t$ is
 the time elapsed since the start of the fund. To finance the purchase of the
 options some stocks are sold. This way no money has to be injected in the
 fund.
+
 
 \subsection{Black-Scholes}
 
