Added a path plotter.

--- a/report/report.tex
+++ b/report/report.tex
@@ -26,7 +26,8 @@ which includes a mean reverting term $\xi_t$ defined as follows:
 \end{equation}
 The Brownian motions $W_t^{\{(1), (2)\}}$ in  equation \eqref{eq:stock} and
 \eqref{eq:vol} are two independent identically distributed random variables.
-They have the property that $W_0=0$ and $W_t - W_s \sim N(0, t - s)$ for $s < t$. 
+They have the property that $W_0=0$ and $W_t - W_s \sim N(0, t - s)$ for $s <
+t$.
 
 \section{Numerical Methods}
 \subsection{Stock Process}
@@ -197,6 +198,5 @@ the behaviour of $S_{0 \leq t < T}$, $E(S_{0 \leq t < T})$ and $E(S_T)$.
 
 
 \end{document}
-
 
 % vim: spell spelllang=en
