Changed several options.

--- a/report/report.tex
+++ b/report/report.tex
@@ -197,6 +197,12 @@ section. The first experiments investigate the impact of $p$ and $\alpha$ on
 the behaviour of $S_{0 \leq t < T}$, $E(S_{0 \leq t < T})$ and $E(S_T)$.
 
 
+\section{Click-Fund}
+The Black-Scholes model of a stock price assumes that the drift term $\mu = (r
+- \frac{1}{2}\sigma_t$. 
+
+
+
 \end{document}
 
 % vim: spell spelllang=en
