--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,onecolumn]{IEEEtran}
+\documentclass[a4paper,onecolumn,draft]{IEEEtran}
 \usepackage{amsmath}
 \usepackage[english]{babel}
 \usepackage{graphicx}
@@ -199,6 +199,20 @@ section. The first experiments investigate the impact of $p$ and $\alpha$ on
 the behaviour of $S_{0 \leq t \leq T}$, $\sigma_{0 \leq t \leq T}$ and
 $\xi_{0 \leq t \leq T}$. 
 
+\subsection{Strong Convergence}
+Through experiments the order of strong convergence is sought.
+
+
+To find the strong order of a numerical method the absolute error, $\epsilon = \sum_{i =
+1}^N (S_T - y_T^h)$, is first fitted on a model $\epsilon = h^\gamma$.  To
+achieve this a least square fit is performed on the model $\log(\epsilon) =
+\widetilde{\gamma}\cdot\log(h)$.  The resulting $\widetilde{\gamma}$ is an
+estimate of the order of the strong convergence of the numerical method. Using
+the estimated $\widetilde{\gamma}$ a fit is performed on the equation
+$\epsilon = a\cdot h^{\widetilde{\gamma}}$ to find $a$. Depending on the
+residual standard error of the fit it can be concluded that the model with the
+parameters $a$ and $\widetilde{\gamma}$ is an acceptable approximation.
+
 \newcommand{\stockplotsize}{9cm}
 \ctable[caption={The path of a stock given different $p$ for $\alpha = \{0.1,
 				1, 2\}$},
@@ -304,6 +318,88 @@ $\xi_{0 \leq t \leq T}$.
 			\includegraphics[width=\stockplotsize]{box_s30_a2_p2}\LL
 			}
 
+\ctable[caption={Absolute approximation error of the Euler method},
+		label={tab:eul}]{ll*{7}{c}l}{}{\FL
+			\multicolumn{2}{c}{Random number}&\multicolumn{7}{c}{$\Delta
+			t$}&\multicolumn{1}{c}{Fit}\NN\cmidrule(lr){3-9}
+		\multicolumn{2}{c}{generator}&0.0002&0.0005&0.0008&0.001&0.002&0.005&0.008&\ML
+		MT with seed&4357&0.0288&0.0570&0.0766&0.0862&0.1247&0.2021&0.2522&
+			$\epsilon(h) \approx 36.44 h^{0.5747 - 0.6045}$\NN\cmidrule(lr){2-10}
+		            &5489&0.0287&0.0571&0.0755&0.0854&0.1232&0.1978&0.2554&
+			$\epsilon(h) \approx 2.792 h^{1/2}$\NN\cmidrule(lr){2-10}
+                  &3&0.0284&0.0571&0.0751&0.0855&0.1248&0.1974&0.2506&
+			$\epsilon(h) \approx 2.769 h^{1/2}$ \NN\cmidrule{1-10} 
+		Rand with seed&4357&0.0286&0.0566&0.0746&0.0856&0.1233&0.1973&0.2512&
+			$\epsilon(h) \approx 2.767 h^{1/2}$\NN\cmidrule(lr){2-10}
+		              &5489&0.0282&0.0579&0.0758&0.0862&0.1253&0.1984&0.2515&
+			$\epsilon(h) \approx 2.782 h^{1/2}$\NN\cmidrule(lr){2-10}
+		              &3&0.0290&0.0576&0.0769&0.0859&0.1256&0.2000&0.2553&
+			$\epsilon(h) \approx 2.810 h^{1/2}$
+			\LL
+		}
+
+\ctable[caption={Absolute approximation error of the Milstein method},
+		label={tab:eul}]{ll*{7}{c}l}{}{\FL
+		\multicolumn{2}{c}{Random number}&\multicolumn{7}{c}{$\Delta
+			t$}&\multicolumn{1}{c}{Fit}\NN\cmidrule(lr){3-9}
+		\multicolumn{2}{c}{generator}&0.0002&0.0005&0.0008&0.001&0.002&0.005&0.008&\ML
+		MT with seed &4357&0.0141&0.0280&0.0376&0.0424&0.0613&0.0993&0.1247&
+			$\epsilon(h) \approx 17.97 h$\NN\cmidrule(lr){2-10}
+						 &5489&0.0141&0.0281&0.0371&0.0420&0.0606&0.0976&0.1261&
+			$\epsilon(h) \approx 17.98h$\NN\cmidrule(lr){2-10}
+						&3&0.0140&0.0280&0.0370&0.0421&0.0614&0.0974&0.1240&
+			$\epsilon(h) \approx 17.80 h$ \NN\cmidrule{1-10} 
+		Rand with seed&4357&0.0141&0.0278&0.0367&0.0421&0.0607&0.0973&0.1240&
+			$\epsilon(h) \approx 17.79 h$\NN\cmidrule(lr){2-10}
+						  &5489&0.0139&0.0285&0.0373&0.0424&0.0617&0.0978&0.1241&
+			$\epsilon(h) \approx 17.85 h$\NN\cmidrule(lr){2-10}
+		              &3&0.0142&0.0283&0.0377&0.0421&0.0617&0.0982&0.1256&
+			$\epsilon(h) \approx 18.00 h$
+			\LL
+		}
+
+
+\ctable[caption={Absolute approximation error of the Runge-Kutta method},
+		label={tab:eul}]{ll*{7}{c}l}{}{\FL
+		\multicolumn{2}{c}{Random number}&\multicolumn{7}{c}{$\Delta
+			t$}&\multicolumn{1}{c}{Fit}\NN\cmidrule(lr){3-9}
+		\multicolumn{2}{c}{generator}&0.0002&0.0005&0.0008&0.001&0.002&0.005&0.008&\ML
+		MT with seed&4357&0.0139&0.0274&0.0365&0.0411&0.0586&0.0924&0.1137&
+			$\epsilon(h) \approx 16.60 h$\NN\cmidrule(lr){2-10}
+		            &5489&0.0139&0.0274&0.0361&0.0407&0.0579&0.0908&0.1150&
+			$\epsilon(h) \approx 16.60h$\NN\cmidrule(lr){2-10}
+		            &3&0.0138&0.0274&0.0359&0.0407&0.0587&0.0905&0.1131&
+			$\epsilon(h) \approx 16.44 h$ \NN\cmidrule{1-10} 
+		Rand with seed&4357&0.0139&0.0272&0.0356&0.0408&0.0580&0.0905&0.1131&
+			$\epsilon(h) \approx 16.41 h$\NN\cmidrule(lr){2-10}
+		              &5489&0.0137&0.0279&0.0362&0.0411&0.0589&0.0909&0.1131&
+			$\epsilon(h) \approx 16.48 h$\NN\cmidrule(lr){2-10}
+		              &3&0.0140&0.0276&0.0366&0.0408&0.0589&0.0913&0.1146&
+			$\epsilon(h) \approx 16.62 h$
+			\LL
+		}
+
+
+\ctable[caption={Graphical representation of the absolute approximation error
+				of the Euler method},
+		 figure,
+		 label={fig:eul}]{c}{}{\FL
+		 \includegraphics[width=7cm]{abs_error_euler}
+		 \LL}
+
+\ctable[caption={Graphical representation of the absolute approximation error
+				of the Milstein method},
+		 figure,
+		 label={fig:mil}]{c}{}{\FL
+		 \includegraphics[width=7cm]{abs_error_milstein}
+		 \LL}
+
+\ctable[caption={Graphical representation of the absolute approximation error
+				of the Runge-Kutta method},
+		 figure,
+		 label={fig:rk}]{c}{}{\FL
+		 \includegraphics[width=7cm]{abs_error_rk}
+		 \LL}
 
 \bibliographystyle{IEEEtran}
 \bibliography{report}
